--- a/index.html
+++ b/index.html
@@ -362,13 +362,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Darshann2001/DateTime/image.png'"
+                onclick="location.href='https://github.com/Darshann2001/Calculator-App/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://darshann2001.github.io/DateTime/'"
+                onclick="location.href='https://Darshann2001.github.io/Calculator-App'"
               >
                 Live Demo
               </button>
@@ -386,13 +386,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Darshann2001/DateTime/image.png'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://darshann2001.github.io/DateTime/'"
               >
                 Live Demo
               </button>
